# ChangeLog for sys-libs/gwenhywfar
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/gwenhywfar/ChangeLog,v 1.71 2009/09/11 23:56:06 patrick Exp $

*gwenhywfar-3.10.1 (11 Sep 2009)

  11 Sep 2009; Patrick Lauer <patrick@gentoo.org> +gwenhywfar-3.10.1.ebuild:
  Bump, closes #279933

  02 Aug 2009; Markus Meier <maekke@gentoo.org> gwenhywfar-3.8.2.ebuild:
  amd64 stable, bug #275705

  29 Jul 2009; Jeroen Roovers <jer@gentoo.org> gwenhywfar-3.8.2.ebuild:
  Stable for HPPA (bug #275705).

  08 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  gwenhywfar-3.8.2.ebuild:
  stable x86, bug 275705

*gwenhywfar-3.8.2 (04 Jun 2009)

  04 Jun 2009; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-3.8.2.ebuild:
  Version bump.

  23 May 2009; Hanno Boeck <hanno@gentoo.org> gwenhywfar-3.8.1.ebuild:
  Add dependency to libtool 2.

*gwenhywfar-3.8.1 (22 May 2009)

  22 May 2009; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-3.8.1.ebuild,
  +files/gwenhywfar-3.8.1-asneeded.diff,
  +files/gwenhywfar-3.8.1-gcc-check.diff,
  +files/gwenhywfar-3.8.1-gnutls-check.diff:
  Version bump, patches for as-needed, gcc4-check in configure script and
  gnutls 2.7.

*gwenhywfar-3.8.0 (05 Apr 2009)

  05 Apr 2009; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-3.8.0.ebuild:
  Version bump.

*gwenhywfar-3.7.2 (02 Mar 2009)

  02 Mar 2009; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-3.7.2.ebuild:
  Version bump.

*gwenhywfar-3.5.2 (13 Nov 2008)

  13 Nov 2008; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-3.5.2.ebuild:
  Version bump.

  12 Nov 2008; Guy Martin <gmsoft@gentoo.org> gwenhywfar-2.6.2.ebuild:
  hppa stable.

  16 Sep 2008; Hanno Boeck <hanno@gentoo.org> gwenhywfar-3.4.1.ebuild:
  gwenhywfar has changed from openssl to gnutls.

*gwenhywfar-3.4.1 (01 Sep 2008)

  01 Sep 2008; Hanno Boeck <hanno@gentoo.org> +gwenhywfar-3.4.1.ebuild:
  Version bump.

  22 Aug 2008; Markus Meier <maekke@gentoo.org> gwenhywfar-2.6.2.ebuild: