@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/gwenhywfar/gwenhywfar-3.8.2.ebuild,v 1.4 2009/08/02 15:22:19 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/gwenhywfar/gwenhywfar-3.8.2.ebuild,v 1.5 2009/09/27 14:16:14 nixnut Exp $
 
 EAPI="2"
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://gwenhywfar.sourceforge.net"
 SRC_URI="http://www2.aquamaniac.de/sites/download/download.php?package=01&release=23&file=01&dummy=${P}.tar.gz -> ${P}.tar.gz"
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="amd64 hppa ~ppc ~ppc64 ~sparc x86"
+KEYWORDS="amd64 hppa ppc ~ppc64 ~sparc x86"
 
 IUSE="debug ssl doc"
 
