@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/gwenhywfar
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/gwenhywfar/ChangeLog,v 1.71 2009/09/11 23:56:06 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/gwenhywfar/ChangeLog,v 1.72 2009/09/27 14:16:14 nixnut Exp $
+
+  27 Sep 2009; nixnut <nixnut@gentoo.org> gwenhywfar-3.8.2.ebuild:
+  ppc stable #275705
 
 *gwenhywfar-3.10.1 (11 Sep 2009)
 
